@@ -545,14 +545,17 @@ external sys_exit : int -> 'a = "caml_sys_exit"
 
 let exit_function = ref flush_all
 
-let at_exit f =
-  let g = !exit_function in
+let rec at_exit f =
+  let old_exit_function = !exit_function in
   (* MPR#7253, MPR#7796: make sure "f" is executed only once *)
   let f_already_ran = ref false in
-  exit_function :=
-    (fun () ->
-      if not !f_already_ran then begin f_already_ran := true; f() end;
-      g())
+  let new_exit_function () =
+    if not !f_already_ran then begin f_already_ran := true; f() end;
+    old_exit_function()
+  in
+  (* atomic for systhreads *)
+  if old_exit_function == !exit_function then exit_function := new_exit_function
+  else at_exit f
 
 let do_at_exit () = (!exit_function) ()
 
